# newspie

./: news.py  pyproject.toml  requirements.txt
data/: countries.json
