[tool.poetry]
name = "newspie"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
certifi = "^2021.10.8"
chardet = "^4.0.0"
click = "^8.0.3"
Flask = "^2.0.2"
idna = "^3.3"
itsdangerous = "^2.0.1"
Jinja2 = "^3.0.3"
MarkupSafe = "^2.0.1"
python-dateutil = "^2.8.2"
requests-cache = "^0.9.1"
requests = "^2.27.1"
six = "^1.16.0"
url-normalize = "^1.4.3"
urllib3 = "^1.26.8"
Werkzeug = "^2.0.2"
newsapi-python = "^0.2.6"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
